# azure-ai-ocr

./: .gitignore  Dockerfile  DockerfileUi  README.md  pyproject.toml  ui-docker.sh  ui.sh
.github/workflows/: docker-image-ui.yml  docker-image.yml
ai_ocr/: chains.py  main.py  model.py  process.py
ai_ocr/azure/: config.py  doc_intelligence.py  images.py
example-1-sample-collection/: .env.docker  instructions.txt  run.ps1  run.sh  schema.json
example-2-tables/: .env.docker  instructions.txt  run.ps1  run.sh  schema.json
test_ui/: main.py  prompt.py
test_ui/pages/: 1_Config.py
